# hw-monitor-alignment

./: .gitignore  CHANGELOG.md  CMakelists.txt  Cargo.toml  Dockerfile  README.md  build.rs  cliff.toml  cog.toml  generate-test-report.ps1  package-lock.json  package.json  project-words.txt  renovate.json  rustfmt.toml  spellcheck.dic
.cargo/: config.toml
.github/: settings.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml  rust.yml  semgrep.yml
crates/hw-monitor-alignment/: Cargo.toml  README.md
crates/hw-monitor-alignment/src/: bindings.rs  build.rs  main.rs  monitor.rs  state.rs  ui.rs  win32.rs
crates/hw-monitor-alignment/src/ui/: info_panel.rs  main_window.rs  overview.rs  sizeable.rs  todo.slint
crates/hw-monitor-alignment/src/win32/: discover.rs  friendly.rs  overlay.rs  window_style.rs
crates/hw-monitor-alignment/src/win32/overlay/: gdiplus.rs  window.rs
qml/: main.qml
src/: cxxqt_object.rs  lib.rs  main.rs
tests/: integration_tests.rs
