[package]
name = "hw-monitor-alignment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []

[dependencies]
hashbrown = "=0.17.1"
windows = { git = "https://github.com/microsoft/windows-rs", rev = "73befe67861e0f81c35445fdede1dd7a81da1748", features = [
    "errhandlingapi",
    "libloaderapi",
    "minwindef",
    "windef",
    "winerror",
    "wingdi",
    "winuser",
] }
windows-core = { git = "https://github.com/microsoft/windows-rs", rev = "73befe67861e0f81c35445fdede1dd7a81da1748" }
windows-reactor = { git = "https://github.com/microsoft/windows-rs", rev = "73befe67861e0f81c35445fdede1dd7a81da1748" }

[build-dependencies]
windows-bindgen = { git = "https://github.com/microsoft/windows-rs", rev = "73befe67861e0f81c35445fdede1dd7a81da1748" }
windows-rdl = { git = "https://github.com/microsoft/windows-rs", rev = "73befe67861e0f81c35445fdede1dd7a81da1748" }
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs", rev = "73befe67861e0f81c35445fdede1dd7a81da1748" }

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true
